force-app/main/default/objects/Contact/fields/Highest_Level_of_Education_attained__c.field-meta.xml
<CustomField>
    <fullName>Highest_Level_of_Education_attained__c</fullName>
    <label>Highest Level of Education attained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Vocational Training Institutions</fullName>
            </value>
            <value>
                <fullName>Teacher Training Colleges</fullName>
            </value>
            <value>
                <fullName>Community Colleges</fullName>
            </value>
            <value>
                <fullName>Other College/Institutions</fullName>
            </value>
            <value>
                <fullName>University: Undergraduate</fullName>
            </value>
            <value>
                <fullName>University: Post Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>