force-app/main/default/objects/Contact/fields/Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number__c</fullName>
    <label>Identification Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>