force-app/main/default/objects/Contact/fields/Identification_Type_Country_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type_Country_of_issue__c</fullName>
    <label>Identification Type Country of issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>