force-app/main/default/objects/Contact/fields/Identification_Type_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type_Expiration__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Identification Type Expiration</label>
    <type>Date</type>
</CustomField>