force-app/main/default/objects/Contact/fields/Jamaican_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Jamaican_Tax_Registration_Number__c</fullName>
    <description>TRN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Jamaican Tax Registration Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>