force-app/main/default/objects/Contact/fields/JN_Bank_Affiliated_Location__c.field-meta.xml
<CustomField>
    <fullName>JN_Bank_Affiliated_Location__c</fullName>
    <label>JN Bank Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JN_Locations</valueSetName>
    </valueSet>
</CustomField>