force-app/main/default/objects/Contact/fields/JN_Bank_Affiliated_Name__c.field-meta.xml
<CustomField>
    <fullName>JN_Bank_Affiliated_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JN Bank Affiliated Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>