force-app/main/default/objects/Contact/fields/JN_Bank_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>JN_Bank_Affiliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JN Bank Affiliation</label>
    <type>Checkbox</type>
</CustomField>