force-app/main/default/objects/Contact/fields/JN_Employee__c.field-meta.xml
<CustomField>
    <fullName>JN_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JN Employee</label>
    <type>Checkbox</type>
</CustomField>