force-app/main/default/objects/Contact/fields/Length_of_Current_Employment__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Current_Employment__c</fullName>
    <label>Length of Current Employment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>