force-app/main/default/objects/Contact/fields/Mailing_Post_Office_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Post_Office_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Post Office/Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>