force-app/main/default/objects/Contact/fields/Mailing_Province_Parish_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Province_Parish_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Province/Parish/State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>