force-app/main/default/objects/Contact/fields/Mailing_Street_3__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_3__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Mailing Street 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>