force-app/main/default/objects/Contact/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>