force-app/main/default/objects/Contact/fields/Mother_s_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Maiden_Name__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Mother&apos;s Maiden Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>