force-app/main/default/objects/Contact/fields/Net_Worth_p__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth_p__c</fullName>
    <label>Net Worth_p</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Net_Worth</valueSetName>
    </valueSet>
</CustomField>