force-app/main/default/objects/Contact/fields/Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Place of Birth</label>
    <length>40</length>
    <type>Text</type>
</CustomField>