force-app/main/default/objects/Contact/fields/Political_Affiliation_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Political_Affiliation_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Political Affiliation Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>