force-app/main/default/objects/Contact/fields/Political_Affiliation_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Political_Affiliation_Relationship__c</fullName>
    <label>Political Affiliation Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Familial_Relationship</valueSetName>
    </valueSet>
</CustomField>