force-app/main/default/objects/Contact/fields/Political_Affiliation_Role__c.field-meta.xml
<CustomField>
    <fullName>Political_Affiliation_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>