force-app/main/default/objects/Contact/fields/Political_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Political_Exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Political Exposure</label>
    <type>Checkbox</type>
</CustomField>