force-app/main/default/objects/Contact/fields/Politically_Affiliated_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Politically_Affiliated_Rollup__c</fullName>
    <label>Politically Affiliated Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>