force-app/main/default/objects/Contact/fields/Preferred_time_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_time_of_contact__c</fullName>
    <label>Preferred time of contact</label>
    <type>Time</type>
</CustomField>