force-app/main/default/objects/Contact/fields/Primary_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employment_Type__c</fullName>
    <label>Primary Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employment_Type</valueSetName>
    </valueSet>
</CustomField>