force-app/main/default/objects/Contact/fields/Professional_Category__c.field-meta.xml
<CustomField>
    <fullName>Professional_Category__c</fullName>
    <label>Professional Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Clerical</fullName>
            </value>
            <value>
                <fullName>Skiled Worker</fullName>
            </value>
            <value>
                <fullName>Unskilled Worker</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>