force-app/main/default/objects/Contact/fields/Residential_Area_District__c.field-meta.xml
<CustomField>
    <fullName>Residential_Area_District__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Residential Area/District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>