force-app/main/default/objects/Contact/fields/Status_of_Address__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Address__c</fullName>
    <label>Status of Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_Status</valueSetName>
    </valueSet>
</CustomField>