force-app/main/default/objects/Contact/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Street 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>