force-app/main/default/objects/Contact/fields/Total_Debt_to_Service_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_to_Service_Ratio__c</fullName>
    <label>Total Debt to Service Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>