force-app/main/default/objects/Contact/fields/Years_at_Residence__c.field-meta.xml
<CustomField>
    <fullName>Years_at_Residence__c</fullName>
    <description>In month</description>
    <label>Years at Residence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>