force-app/main/default/objects/Contact/validationRules/FinServ__CannotHaveMoreThanOnePrimaryAddress.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__CannotHaveMoreThanOnePrimaryAddress</fullName>
    <active>true</active>
    <description
  >Only one address can be designated as the primary address.</description>
    <errorConditionFormula
  >IF(IF(FinServ__PrimaryAddressIsMailing__c,1,0) + IF(FinServ__PrimaryAddressIsOther__c,1,0)+  IF(FinServ__PrimaryAddressIsBilling__c,1,0)+ IF(FinServ__PrimaryAddressIsShipping__c,1,0)&gt;1,true,false)</errorConditionFormula>
    <errorMessage
  >Only one address can be designated as the primary address.</errorMessage>
</ValidationRule>