force-app/main/default/objects/Contact/validationRules/Invalid_AssistantPhone_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_AssistantPhone_Formula</fullName>
    <active>true</active>
    <description>Ensures that the assistant phone field is properly validated.</description>
    <errorConditionFormula>IF( OR(ISCHANGED(AssistantPhone) &amp;&amp; NOT(ISNULL(AssistantPhone )) &amp;&amp; NOT(ISBLANK(AssistantPhone)) &amp;&amp; !REGEX(AssistantPhone ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(AssistantPhone)) &amp;&amp; NOT(ISBLANK(AssistantPhone)) &amp;&amp; !REGEX(AssistantPhone,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>AssistantPhone</errorDisplayField>
    <errorMessage>Invalid format entered for assistant phone. The minimum number of digits should be 10</errorMessage>
</ValidationRule>