force-app/main/default/objects/Contact/validationRules/Invalid_BusinessPhone_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_BusinessPhone_Formula</fullName>
    <active>true</active>
    <description
  >Ensures that the business phone field is properly validated.</description>
    <errorConditionFormula
  >IF( OR(ISCHANGED(Business_Phone__c) &amp;&amp; NOT(ISNULL(Business_Phone__c)) &amp;&amp; NOT(ISBLANK(Business_Phone__c)) &amp;&amp; !REGEX(Business_Phone__c ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(Business_Phone__c)) &amp;&amp; NOT(ISBLANK(Business_Phone__c)) &amp;&amp; !REGEX(Business_Phone__c ,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>Business_Phone__c</errorDisplayField>
    <errorMessage
  >Invalid format entered for business phone. The minimum number of digits should be 10</errorMessage>
</ValidationRule>