force-app/main/default/objects/Contact/validationRules/Invalid_EmergContactHomePhone_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_EmergContactHomePhone_Formula</fullName>
    <active>true</active>
    <description
  >Ensures that the emergency contact home phone field is properly validated.</description>
    <errorConditionFormula
  >IF( OR(ISCHANGED(Emergency_Contact_Home_Phone__c) &amp;&amp; NOT(ISNULL(Emergency_Contact_Home_Phone__c)) &amp;&amp; NOT(ISBLANK(Emergency_Contact_Home_Phone__c)) &amp;&amp; !REGEX(Emergency_Contact_Home_Phone__c ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(Emergency_Contact_Home_Phone__c)) &amp;&amp; NOT(ISBLANK(Emergency_Contact_Home_Phone__c)) &amp;&amp; !REGEX(Emergency_Contact_Home_Phone__c ,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>Emergency_Contact_Home_Phone__c</errorDisplayField>
    <errorMessage
  >Invalid format entered for emergency contact home phone. The minimum number of digits should be 10</errorMessage>
</ValidationRule>