force-app/main/default/objects/Contact/validationRules/Invalid_Fax_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Fax_Formula</fullName>
    <active>true</active>
    <description>Ensures that the fax field is properly validated.</description>
    <errorConditionFormula
  >IF( OR(ISCHANGED(Fax ) &amp;&amp; NOT(ISNULL(Fax)) &amp;&amp; NOT(ISBLANK(Fax )) &amp;&amp; !REGEX(Fax  ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(Fax )) &amp;&amp; NOT(ISBLANK(Fax )) &amp;&amp; !REGEX(Fax ,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage
  >Invalid format entered for fax. The minimum number of digits should be 10</errorMessage>
</ValidationRule>