force-app/main/default/objects/Contact/validationRules/Invalid_HomePhone_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_HomePhone_Formula</fullName>
    <active>true</active>
    <description
  >Ensures that the home phone field is properly validated.</description>
    <errorConditionFormula
  >IF( OR(ISCHANGED(HomePhone) &amp;&amp; NOT(ISNULL(HomePhone)) &amp;&amp; NOT(ISBLANK(HomePhone)) &amp;&amp; !REGEX(HomePhone  ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(HomePhone)) &amp;&amp; NOT(ISBLANK(HomePhone)) &amp;&amp; !REGEX(HomePhone ,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>HomePhone</errorDisplayField>
    <errorMessage
  >Invalid format entered for home phone. The minimum number of digits should be 10.</errorMessage>
</ValidationRule>