force-app/main/default/objects/Contact/validationRules/Invalid_Mobile_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Mobile_Formula</fullName>
    <active>true</active>
    <description
  >Ensures that the mobile field is properly validated.</description>
    <errorConditionFormula
  >IF( OR(ISCHANGED(MobilePhone) &amp;&amp; NOT(ISNULL(MobilePhone)) &amp;&amp; NOT(ISBLANK(MobilePhone)) &amp;&amp; !REGEX(MobilePhone  ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(MobilePhone)) &amp;&amp; NOT(ISBLANK(MobilePhone)) &amp;&amp; !REGEX(MobilePhone,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage
  >Invalid format entered for mobile. The minimum number of digits should be 10</errorMessage>
</ValidationRule>