force-app/main/default/objects/Contact/validationRules/Invalid_MobileNumber_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_MobileNumber_Formula</fullName>
    <active>true</active>
    <description
  >Ensures that the mobile number field is properly validated.</description>
    <errorConditionFormula
  >IF( OR(ISCHANGED(Mobile_Number__c) &amp;&amp; NOT(ISNULL(Mobile_Number__c)) &amp;&amp; NOT(ISBLANK(Mobile_Number__c)) &amp;&amp; !REGEX(Mobile_Number__c  ,&apos;^\\d{10,25}$&apos;), ISNEW() &amp;&amp; NOT(ISNULL(Mobile_Number__c)) &amp;&amp; NOT(ISBLANK(Mobile_Number__c)) &amp;&amp; !REGEX(Mobile_Number__c,&apos;^\\d{10,25}$&apos;)),true,false)</errorConditionFormula>
    <errorDisplayField>Mobile_Number__c</errorDisplayField>
    <errorMessage
  >Invalid format entered for mobile number. The minimum number of digits should be 10</errorMessage>
</ValidationRule>